# thumbnail-rs-lambda

./: .gitignore  Cargo.toml  LICENSE  README.md  samconfig.toml  ship  template.yaml
src/: main.rs
