[package]
name = "thumbnail-rs"
version = "0.1.0"
edition = "2021"


# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.6.1", default-features = false, features = ["s3"] }
lambda_runtime = "0.5.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws-sdk-s3 = "0.13.0"
aws-config = "0.13.0"
image = "0.24.2"
log = "0.4.17"
simple_logger = "2.1.0"

